...
    if (openDialogDeleteDayPoint.value) {
        androidx.compose.material3.AlertDialog(
            onDismissRequest = {
                openDialogDeleteDayPoint.value = false
            },
            title = {
                Text(modifier = Modifier.testTag("trip_info_screen_confirm_delete_trip_note_tag"),
                    text = stringResource(R.string.delete_trip_confirm))
            },
            text = {
                Text("")
            },
            confirmButton = {
                androidx.compose.material3.Button(
                    modifier = Modifier.testTag("trip_info_screen_confirm_delete_trip_button_tag"),
                    onClick = {
                        viewModel.deleteTripFromWeb(tripId)
                        openDialogDeleteDayPoint.value = false
                    },
                ) {
                    Text(
...
            }
        )
    }

    AppTheme() {
        Scaffold(
            modifier = Modifier.fillMaxSize().testTag("trip_info_screen_tag"),
            topBar = {
                SmallTopAppBar(
                    title = {
                        if (currentTrip != null) {
                            Text(currentTrip!!.trip.title.cut(20))
                        }
...
                                painter = painterResource(id = R.drawable.internet),
                                tint = MaterialTheme.colorScheme.error,
                                contentDescription = "No internet connection"
                            )
                        }
                        if(tripWithUsers != null && tripWithUsers?.trip?.ownerId == appPref.userDetails?.id) {
                            IconButton(modifier = Modifier.testTag("trip_info_screen_delete_trip_button_tag"), onClick = {
                                openDialogDeleteDayPoint.value = true
                            }) {
                                Icon(
                                    imageVector = Icons.Filled.Delete,
                                    contentDescription = null
                                )
...
