...
                color = MaterialTheme.colorScheme.background
            ) {
                    Column(modifier = Modifier.padding(12.dp),
                        verticalArrangement = Arrangement.SpaceBetween,
                        horizontalAlignment = Alignment.CenterHorizontally) {
                        Text(
                            modifier =  Modifier.testTag("add_expense_dialog_text_tag"),
                            text = stringResource(R.string.add_new_expense_and_participants),
                            color = MaterialTheme.colorScheme.onBackground,
                            style = MaterialTheme.typography.titleLarge,
                            maxLines = 3,
                        )
                        TitleNewDuty(newDutyTitleState = newDutyTitleState, localFocusManager)
                        AmountNewDuty(
                            newDutyAmountState = newDutyAmountState,
                            modifier = Modifier.focusRequester(amountFocusRequest).testTag("add_expense_dialog_amount_tag")
                        )
                        CurrencyCodeNewDuty(
                            newDutyCurrencyCodeState = newDutyCurrencyCodeState,
                            modifier = Modifier.focusRequester(amountFocusRequest)
                        )
                        FriendsShareNewDuty(
...
                                    false
                                )
                            }) {
                                Text(text = stringResource(R.string.cancel))
                            }
                            androidx.compose.material3.Button(
                                modifier = Modifier.testTag("add_expense_dialog_button_tag"),
                                onClick = {
                                    viewModel.createNewExpense(
                                        newDutyTitleState.text,
                                        newDutyAmountState.text,
                                        CurrencyCode.valueOf(newDutyCurrencyCodeState.text),
                                        dayPointId = dayPointId
...
                    text = stringResource(R.string.invalid_trip_title)
                )
            }

        },
        isError = newDutyTitleState.showErrors(),
        modifier = Modifier.testTag("add_expense_dialog_title_tag")
            .fillMaxWidth()
            .onFocusChanged { focusState ->
                newDutyTitleState.onFocusChange(focusState.isFocused)
                if (!focusState.isFocused) {
                    newDutyTitleState.enableShowErrors()
                }
...
