...
) {
    val passwordFocusRequest = remember { FocusRequester() }
    val emailState by remember { mutableStateOf(EmailState())}
    val passwordState = remember { PasswordState() }

    Column(
        modifier = Modifier .testTag("login_screen_tag")
            .fillMaxSize()
            .padding(top = 25.dp, start = 8.dp, end = 8.dp)
    ) {

        Row(modifier = Modifier.fillMaxWidth()) {
            Text(
...
                        password = passwordState.text
                    )
                },
                enabled = emailState.isValid && passwordState.isValid,
                colors = ButtonDefaults.elevatedButtonColors(containerColor = MaterialTheme.colorScheme.primary),
                modifier = Modifier
                    .weight(1f).testTag("login_button_tag"),
            ) {
                Box(
                    modifier = Modifier
                        .fillMaxWidth(),
                    contentAlignment = Alignment.Center
                ) {
...
                imageVector = Icons.Filled.Email,
                contentDescription = null
            )
        },
        isError = emailState.showErrors(),
        modifier = modifier
            .testTag("login_email_tag")
            .fillMaxWidth()
            .onFocusChanged { focusState ->
                emailState.onFocusChange(focusState.isFocused)
                if (!focusState.isFocused) {
                    emailState.enableShowErrors()
                }
...

    val showPassword = rememberSaveable { mutableStateOf(false) }

    OutlinedTextField(
        visualTransformation = if (showPassword.value) VisualTransformation.None else PasswordVisualTransformation(),
        modifier = modifier
            .testTag("login_password_tag")
            .fillMaxWidth()
            .onFocusChanged { focusState ->
                passwordState.onFocusChange(focusState.isFocused)
                if (!focusState.isFocused) {
                    passwordState.enableShowErrors()
                }
...
