...
    val coroutineScope = rememberCoroutineScope()

    AppTheme() {
        androidx.compose.material.Scaffold(
            modifier = Modifier
                .fillMaxSize()
                .testTag("main_screen"),
            scaffoldState = scaffoldState,
            topBar = {
                SmallTopAppBar(
                    title = {
                        Text(stringResource(R.string.way_planner))
                    },
...
                        containerColor = MaterialTheme.colorScheme.primary,
                        titleContentColor = MaterialTheme.colorScheme.onPrimary,
                        actionIconContentColor = MaterialTheme.colorScheme.onPrimary,
                        navigationIconContentColor = MaterialTheme.colorScheme.onPrimary
                    ),
                    navigationIcon = {
                        IconButton(modifier = Modifier.testTag("menu"),
                            onClick = {
                            coroutineScope.launch {
                                scaffoldState.drawerState.open()
                            }
                        }) {
                            Icon(
...
                        }
                    },
                )
            },
            floatingActionButton = {
                FloatingActionButton(
                    modifier = Modifier.testTag("create_trip_button_tag"),
                    onClick = {
                        viewModel.navigate(Routes.CreateNewTripRoute.route)
                    },
                    containerColor = MaterialTheme.colorScheme.tertiaryContainer,
                    contentColor = MaterialTheme.colorScheme.onTertiaryContainer,
                    ) {
...
